--- a/src/content/pages/audio.mdx
+++ b/src/content/pages/audio.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Elements"
+title: "Audio"
 meta_title: ""
-description: "this is meta description"
+description: "Sintaxis Audio"
 draft: false
 ---
 
