--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -61,29 +61,8 @@ Some text to show that the reference links can follow later.
 
 ---
 
-### Quote
-
-> Did you come here for something in particular or just general Riker-bashing? And blowing into maximum warp speed, you appeared for an instant to be in two places at once.
-
 ---
 
-### Notice
-
-<Notice type="note">
-This is a simple note.
-</Notice>
-
-<Notice type="tip">
-This is a simple note.
-</Notice>
-
-<Notice type="info">
-This is a simple note.
-</Notice>
-
-<Notice type="warning">
-This is a simple note.
-</Notice>
 
 ---
 
@@ -123,49 +102,74 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 
 ---
 
-### Table
 
-| #   |    First     |     Last     |       Handle |
-| :-- | :----------: | :----------: | -----------: |
-| 1   | Row:1 Cell:1 | Row:1 Cell:2 | Row:1 Cell:3 |
-| 2   | Row:2 Cell:1 | Row:2 Cell:2 | Row:2 Cell:3 |
-| 3   | Row:3 Cell:1 | Row:3 Cell:2 | Row:3 Cell:3 |
 
 ---
 
 ### Accordion
 
-<Accordion client:load title="Why should you need to do this?">
+<Accordion client:load title="PALABRAS">
 
-```javascript
-window.addEventListener("load", (e) => {
-  document.querySelector(".preloader").style.display = "none";
-});
+
+
+```
+achanqaray
 ```
 
-```javascript
-window.addEventListener("load", (e) => {
-  document.querySelector(".preloader").style.display = "none";
-});
+```
+achikyay
+```
+
+```
+achka mayu
+```
+
+```
+achkan qucha
+```
+
+```
+achokcha
+```
+
+```
+amaru
 ```
 
 
-```javascript
-window.addEventListener("load", (e) => {
-  document.querySelector(".preloader").style.display = "none";
-});
+```
+anchata wayra
 ```
 
-```javascript
-window.addEventListener("load", (e) => {
-  document.querySelector(".preloader").style.display = "none";
-});
 ```
-
-```javascript
-window.addEventListener("load", (e) => {
-  document.querySelector(".preloader").style.display = "none";
-});
+anqas challwa
+```
+```
+anqas qantu
+```
+```
+anqas tika
+```
+```
+anqaschiy
+```
+```
+añawicha
+```
+```
+asichay
+```
+```
+awarmatu
+```
+```
+chakana llimpi
+```
+```
+chakanacha
+```
+```
+chakanata
 ```
 
 </Accordion>
