--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -13,104 +13,40 @@ Los imagenes que se generan en yupanasimi son texturas basadas en los tejidos x 
 ---
 
 
----
-
-### Link
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link with title](https://www.google.com "Google's Homepage")
-
-[I'm a reference-style link][arbitrary case-insensitive reference text]
-
-[I'm a relative reference to a repository file](../blob/master/LICENSE)
-
-[You can use numbers for reference-style link definitions][1]
-
-Or leave it empty and use the [link text itself].
-
-example.com (but not on Github, for example).
-
-Some text to show that the reference links can follow later.
-
-[arbitrary case-insensitive reference text]: https://www.themefisher.com
-[1]: https://gethugothemes.com
-[link text itself]: https://www.getjekyllthemes.com
-
----
-
----
-
-### Unordered List
-
-- List item
-- List item
-- List item
-- List item
-- List item
-
----
-
-
-
----
-
 ### Button
 
 <Button label="Button" link="#" style="solid"/>
 
 ---
 
+### recomendación 
+
+> Nunca pares de aprender, haz de el errores un amigo
+
 ---
 
+### Notice
 
----
+<Notice type="note">
+Palabras de yapanasimi
+</Notice>
 
-### Tab
+<Notice type="tip">
+This is a simple note.
+</Notice>
 
-<Tabs client:load>
+<Notice type="info">
+This is a simple note.
+</Notice>
 
-<Tab name="Tab 1">
+<Notice type="warning">
 
-#### Did you come here for something in particular?
-
-Did you come here for something in particular or just general Riker-bashing? And blowing into maximum warp speed, you appeared for an instant to be in two places at once. We have a saboteur aboard. We know you’re dealing in stolen ore. But I wanna talk about the assassination attempt on Lieutenant Worf.
-
-</Tab>
-
-<Tab name="Tab 2">
-
-#### I wanna talk about the assassination attempt
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
-</Tab>
-
-<Tab name="Tab 3">
-
-#### We know you’re dealing in stolen ore
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-
-</Tab>
-
-</Tabs>
+</Notice>
 
 ---
 
 
-
----
-
-### Accordion
-
-<Accordion client:load title="PALABRAS">
-
-
+### palabras 
 
 ```
 achanqaray
@@ -169,46 +105,68 @@ chakana llimpi
 chakanacha
 ```
 ```
-chakanata
+challwa
+```
+```
+chiwaku
+```
+```
+hatunkuntur
+```
+```
+hatunmamaqucha
+```
+```
+hatun miski ruru
+```
+```
+hatunnawi
+```
+```
+hatunqantu
+```
+```
+hatunqinti
+```
+```
+hatunqoyllur
+```
+```
+hatuntika
+```
+```
+hatunwayra
+```
+```
+hatunyuraqmayu
+```
+```
+huchuyrapi
+```
+```
+huchuytawakuchu
+```
+```
+huchuywayra
+```
+```
+illachallimpi
+```
+```
+illa
+```
+```
+illapa
+```
+```
+illariypiqintikuna
 ```
 
-</Accordion>
 
-<Accordion client:load title="How can I adjust Horizontal centering">
-
-- This is a thing.
-- This is a thing.
-- This is a thing.
-- This is a thing.
-- This is a thing.
-
-</Accordion>
-
-<Accordion client:load title="Should you use Negative margin?">
-
-- This is a thing.
-- This is a thing.
-- This is a thing.
-- This is a thing.
-- This is a thing.
-
-</Accordion>
 
 ---
 
-### Image
-
-![image](/images/image-placeholder.png)
-
----
-
-### Youtube video
-
-<Youtube client:load id="ZEe-IFezQok" title="Youtube Video Test Title" />
-
----
-
-### Custom video
+### Ejemplo en vídeo 
 
 <Video
   width="100%"
