palabras video 1 pak

--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -161,6 +161,248 @@ illapa
 ```
 illariypiqintikuna
 ```
+```
+illariyqinti
+```
+```
+inkill
+```
+```
+hatunwayrapiwayta
+```
+```
+ispi
+```
+```
+kallpa
+```
+```
+Karachi
+```
+```
+kulli
+```
+```
+kusisqa
+```
+```
+kuyuqunu
+```
+```
+kuyuqyaku
+```
+```
+kuyuyyakukuna
+```
+```
+liqiliqi
+```
+```
+llama
+```
+```
+llimpisapa
+```
+```
+llipiqyay
+```
+```
+mallkucha
+```
+```
+mallkukuna
+```
+```
+mallkuta
+```
+```
+mamaquchallimpi
+```
+
+```
+mamaqucha
+```
+```
+mayupichallwa
+```
+```
+mayullimpi
+```
+```
+mayupipisqu
+```
+```
+mayupisqu /
+```
+```
+mayu
+```
+```
+mayuwanchallwatahamun
+```
+```
+mikuqqintikuna
+```
+```
+mikuqqinti
+```
+```
+misi
+```
+```
+miskinina
+```
+```
+miskirurucha
+```
+```
+miskiruru
+```
+```
+musquy
+```
+```
+muyukuna
+```
+```
+muyu
+```
+```
+muyuq llimpi
+```
+```
+muyuqmamaqucha
+```
+```
+muyuqwayra
+```
+```
+muyuqqinti /
+```
+```
+muyuq wayracha
+```
+```
+muyuq wayrakuna
+```
+```
+muyuqyaku
+```
+```
+ninarapi
+```
+```
+nana
+```
+```
+nankuna
+```
+```
+nawi
+```
+```
+orqo
+```
+```
+pachamama
+```
+```
+llamacha
+```
+```
+kullitika
+```
+```
+pana
+```
+```
+paqchallimpi /
+```
+```
+paqchapichallwa
+```
+```
+parallimpi
+```
+```
+patapatallimpi
+```
+```
+pillpintucha
+```
+```
+paway
+```
+```
+phaway
+```
+```
+patapata
+```
+```
+pillpintusarapas
+```
+```
+pillpintutatikapas
+```
+```
+pirqallimpi
+```
+```
+pirqa
+```
+```
+pisqu
+```
+```
+pukainkill
+```
+```
+pukamayu /
+```
+```
+pukanawi
+```
+```
+pukapatapata
+```
+```
+pukapisqu
+```
+```
+pukawayra /
+```
+```
+pukawayta
+```
+```
+pukaya /
+```
+```
+puka
+```
+```
+pukayarqa
+```
+```
+puriqtika
+```
+```
+puru
+```
+```
+puytullimpi
+```
+```
+puytunawi
+```
+```
+puytu
+```
+```
+puyullimpi
+```
+
 
 
 
