palabras video 1.1 pak

--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -402,6 +402,118 @@ puytu
 ```
 puyullimpi
 ```
+```
+puyu
+```
+```
+qantu
+```
+```
+qarachi
+```
+```
+qello
+```
+```
+qilluya
+```
+```
+qinqumanta
+```
+```
+qintipaña
+```
+```
+qoriwayra /
+```
+```
+qoyllur ruyru
+```
+```
+qoyllur chaska
+```
+```
+qoyllur tika
+```
+```
+qoyllurkuna
+```
+```
+qucha llimpi
+```
+```
+qucha pillpintu
+```
+```
+quchakuna
+```
+```
+quchakuna urqukunapas
+```
+```
+quchata
+```
+```
+qumir wayta llimpi
+```
+```
+rapi 
+```
+```
+rapi llimpi
+```
+```
+rapi ñawi
+```
+```
+rapi paña
+```
+```
+rapi ruyru 
+```
+```
+rapikuna
+```
+```
+rapikuna llimpi
+```
+```
+rapipi pillpíntu
+```
+```
+riti urqu
+```
+```
+rupay
+```
+```
+rupha
+```
+```
+sapan pillpintu
+```
+```
+sapan qoyllur
+```
+```
+sisa
+```
+```
+suchi
+```
+```
+puyullimpi
+```
+```
+puyullimpi
+```
+```
+puyullimpi
+```
+```
+puyullimpi
+```
+
 
 
 
