--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -48,471 +48,112 @@ This is a simple note.
 
 ### palabras 
 
-```
-achanqaray
-```
+<ul>
 
-```
-achikyay
-```
+<li><a href="http://yupanasimi.org/video/705.mp4" target="_blank"> <b>achanqaray</b></a> </li>
+<li><a href="http://yupanasimi.org/video/718.mp4" target="_blank"> <b>achikyay</b></a></li>
+<li><a href="http://yupanasimi.org/video/102.mp4" target="_blank"> <b>achka mayu</b></a></li>
+<li><a href="http://yupanasimi.org/video/102.mp4" target="_blank"> <b>achkan qucha</b></a></li>
+<li><a href="http://yupanasimi.org/video/709.mp4" target="_blank"> <b>achokcha</b></a></li>
+<li><a href="http://yupanasimi.org/video/405.mp4" target="_blank"> <b>amaru</b></a> </li>
+<li><a href="http://yupanasimi.org/video/811.mp4" target="_blank"> <b>anchata wayra</b></a></li>
+<li><a href="http://yupanasimi.org/video/827.mp4" target="_blank"> <b>anqas challwa</b></a> </li>
+<li><a href="http://yupanasimi.org/video/813.mp4" target="_blank"> <b>anqas qantu</b></a> </li>
+<li><a href="http://yupanasimi.org/video/711.mp4" target="_blank"> <b>anqas tika</b></a></li>
+<li><a href="http://yupanasimi.org/video/878.mp4" target="_blank"> <b>anqaschiy</b></a></li>
+<li><a href="http://yupanasimi.org/video/698.mp4" target="_blank"> <b>añawicha</b></a></li>
+<li><a href="http://yupanasimi.org/video/828.mp4" target="_blank"> <b>asichay</b></a> </li>
+<li><a href="http://yupanasimi.org/video/704.mp4" target="_blank"> <b>awarmatu</b></a> </li>
+<li><a href="http://yupanasimi.org/video/302.mp4" target="_blank"> <b>chakana llimpi</b></a> </li>
+<li><a href="http://yupanasimi.org/video/305.mp4" target="_blank"> <b>chakanacha</b></a>  </li>
+<li><a href="http://yupanasimi.org/video/015.mp4" target="_blank"> <b>chakanata</b></a> </li>
+<li><a href="http://yupanasimi.org/video/025.mp4" target="_blank"> <b>challwa</b></a> </li>
+<li><a href="http://yupanasimi.org/video/854.mp4" target="_blank"> <b>chiwaku</b></a> </li>
+<li><a href="http://yupanasimi.org/video/716.mp4" target="_blank"> <b>hatun kuntur</b></a> </li>
+<li><a href="http://yupanasimi.org/video/821.mp4" target="_blank"> <b>hatun mama qucha</b></a> </li>
+<li><a href="http://yupanasimi.org/video/697.mp4" target="_blank"> <b>hatun miski ruru</b></a> </li>
+<li><a href="http://yupanasimi.org/video/831.mp4" target="_blank"> <b>hatun ñawi</b></a>  </li>
+<li><a href="http://yupanasimi.org/video/810.mp4" target="_blank"> <b>hatun qantu</b></a>  </li>
+<li><a href="http://yupanasimi.org/video/722.mp4" target="_blank"> <b>hatun qinti</b></a>  </li>
+<li><a href="http://yupanasimi.org/video/715.mp4" target="_blank"> <b>hatun qoyllur</b></a>   </li>
+<li><a href="http://yupanasimi.org/video/717.mp4" target="_blank"> <b>hatun tika</b></a>  </li>
+<li><a href="http://yupanasimi.org/video/833.mp4" target="_blank"> <b>hatun wayra</b></a>  </li>
+<li> <a href="http://yupanasimi.org/video/816.mp4" target="_blank"> <b>hatun yuraq mayu</b></a></li>
+<li> <a href="http://yupanasimi.org/video/108.mp4" target="_blank"> <b>huchuy rapi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/864.mp4" target="_blank"> <b>huchuy wayra</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/106.mp4" target="_blank"> <b>illa llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/732.mp4" target="_blank"> <b>illacha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/852.mp4" target="_blank"> <b>illariy qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/853.mp4" target="_blank"> <b>illariypi qintikuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/804.mp4" target="_blank"> <b>inkill</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/868.mp4" target="_blank"> <b>intihina tika</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/889.mp4" target="_blank"> <b>ispi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/733.mp4" target="_blank"> <b>kallpa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/875.mp4" target="_blank"> <b>karachi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/702.mp4" target="_blank"> <b>kulli</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/301.mp4" target="_blank"> <b>kusisqa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
 
-```
-achka mayu
-```
-
-```
-achkan qucha
-```
-
-```
-achokcha
-```
-
-```
-amaru
-```
 
 
-```
-anchata wayra
-```
 
-```
-anqas challwa
-```
-```
-anqas qantu
-```
-```
-anqas tika
-```
-```
-anqaschiy
-```
-```
-añawicha
-```
-```
-asichay
-```
-```
-awarmatu
-```
-```
-chakana llimpi
-```
-```
-chakanacha
-```
-```
-challwa
-```
-```
-chiwaku
-```
-```
-hatunkuntur
-```
-```
-hatunmamaqucha
-```
-```
-hatun miski ruru
-```
-```
-hatunnawi
-```
-```
-hatunqantu
-```
-```
-hatunqinti
-```
-```
-hatunqoyllur
-```
-```
-hatuntika
-```
-```
-hatunwayra
-```
-```
-hatunyuraqmayu
-```
-```
-huchuyrapi
-```
-```
-huchuytawakuchu
-```
-```
-huchuywayra
-```
-```
-illachallimpi
-```
-```
-illa
-```
-```
-illapa
-```
-```
-illariypiqintikuna
-```
-```
-illariyqinti
-```
-```
-inkill
-```
-```
-hatunwayrapiwayta
-```
-```
-ispi
-```
-```
-kallpa
-```
-```
-Karachi
-```
-```
-kulli
-```
-```
-kusisqa
-```
-```
-kuyuqunu
-```
-```
-kuyuqyaku
-```
-```
-kuyuyyakukuna
-```
-```
-liqiliqi
-```
-```
-llama
-```
-```
-llimpisapa
-```
-```
-llipiqyay
-```
-```
-mallkucha
-```
-```
-mallkukuna
-```
-```
-mallkuta
-```
-```
-mamaquchallimpi
-```
 
-```
-mamaqucha
-```
-```
-mayupichallwa
-```
-```
-mayullimpi
-```
-```
-mayupipisqu
-```
-```
-mayupisqu /
-```
-```
-mayu
-```
-```
-mayuwanchallwatahamun
-```
-```
-mikuqqintikuna
-```
-```
-mikuqqinti
-```
-```
-misi
-```
-```
-miskinina
-```
-```
-miskirurucha
-```
-```
-miskiruru
-```
-```
-musquy
-```
-```
-muyukuna
-```
-```
-muyu
-```
-```
-muyuq llimpi
-```
-```
-muyuqmamaqucha
-```
-```
-muyuqwayra
-```
-```
-muyuqqinti /
-```
-```
-muyuq wayracha
-```
-```
-muyuq wayrakuna
-```
-```
-muyuqyaku
-```
-```
-ninarapi
-```
-```
-nana
-```
-```
-nankuna
-```
-```
-nawi
-```
-```
-orqo
-```
-```
-pachamama
-```
-```
-llamacha
-```
-```
-kullitika
-```
-```
-pana
-```
-```
-paqchallimpi /
-```
-```
-paqchapichallwa
-```
-```
-parallimpi
-```
-```
-patapatallimpi
-```
-```
-pillpintucha
-```
-```
-paway
-```
-```
-phaway
-```
-```
-patapata
-```
-```
-pillpintusarapas
-```
-```
-pillpintutatikapas
-```
-```
-pirqallimpi
-```
-```
-pirqa
-```
-```
-pisqu
-```
-```
-pukainkill
-```
-```
-pukamayu /
-```
-```
-pukanawi
-```
-```
-pukapatapata
-```
-```
-pukapisqu
-```
-```
-pukawayra /
-```
-```
-pukawayta
-```
-```
-pukaya /
-```
-```
-puka
-```
-```
-pukayarqa
-```
-```
-puriqtika
-```
-```
-puru
-```
-```
-puytullimpi
-```
-```
-puytunawi
-```
-```
-puytu
-```
-```
-puyullimpi
-```
-```
-puyu
-```
-```
-qantu
-```
-```
-qarachi
-```
-```
-qello
-```
-```
-qilluya
-```
-```
-qinqumanta
-```
-```
-qintipaña
-```
-```
-qoriwayra /
-```
-```
-qoyllur ruyru
-```
-```
-qoyllur chaska
-```
-```
-qoyllur tika
-```
-```
-qoyllurkuna
-```
-```
-qucha llimpi
-```
-```
-qucha pillpintu
-```
-```
-quchakuna
-```
-```
-quchakuna urqukunapas
-```
-```
-quchata
-```
-```
-qumir wayta llimpi
-```
-```
-rapi 
-```
-```
-rapi llimpi
-```
-```
-rapi ñawi
-```
-```
-rapi paña
-```
-```
-rapi ruyru 
-```
-```
-rapikuna
-```
-```
-rapikuna llimpi
-```
-```
-rapipi pillpíntu
-```
-```
-riti urqu
-```
-```
-rupay
-```
-```
-rupha
-```
-```
-sapan pillpintu
-```
-```
-sapan qoyllur
-```
-```
-sisa
-```
-```
-suchi
-```
-```
-puyullimpi
-```
-```
-puyullimpi
-```
-```
-puyullimpi
-```
-```
-puyullimpi
-```
+
+
+
+
+
+
+
+
+<li> <a href="http://yupanasimi.org/video/867.mp4"> <b>wayrapi wayta</b></a></li>
+<li> <a href="http://yupanasimi.org/video/857.mp4"> <b>yutukuna</b></a></li>
+<li> <a href="http://yupanasimi.org/video/726.mp4"> <b>yutucha</b></a></li>
+<li> <a href="http://yupanasimi.org/video/817.mp4"> <b>yuraq mayu</b></a></li>
+<li> <a href="http://yupanasimi.org/video/101.mp4"> <b>yunka</b></a></li>
+<li> <a href="http://yupanasimi.org/video/026.mp4"> <b>waytacha</b></a></li>
+<li> <a href="http://yupanasimi.org/video/866.mp4"> <b>wikuñata</b></a></li>
+<li> <a href="http://yupanasimi.org/video/740.mp4"> <b>wikuñacha</b></a></li>
+<li> </li>
+<li> </li>
+<li> </li>
+<li> </li>
+<li> </li>
+<li> </li>
+<li> </li>
+<li> </li>
+<li> </li>
+<li> </li>
+<li> </li>
+<li> </li>
+<li> </li>
+
+
+
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
