--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -13,36 +13,6 @@ Los imagenes que se generan en yupanasimi son texturas basadas en los tejidos x 
 ---
 
 
-### Button
-
-<Button label="Button" link="#" style="solid"/>
-
----
-
-### recomendación 
-
-> Nunca pares de aprender, haz de el errores un amigo
-
----
-
-### Notice
-
-<Notice type="note">
-Palabras de yapanasimi
-</Notice>
-
-<Notice type="tip">
-This is a simple note.
-</Notice>
-
-<Notice type="info">
-This is a simple note.
-</Notice>
-
-<Notice type="warning">
-
-</Notice>
-
 ---
 
 
@@ -93,23 +63,17 @@ This is a simple note.
 <li> <a href="http://yupanasimi.org/video/875.mp4" target="_blank"> <b>karachi</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/702.mp4" target="_blank"> <b>kulli</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/301.mp4" target="_blank"> <b>kusisqa</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/212.mp4" target="_blank"> <b>illapa</b></a> </li>
-
-
-
-
-
-
-
-
-
-
+<li> <a href="http://yupanasimi.org/video/303.mp4" target="_blank"> <b>kuyuq unu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/008.mp4" target="_blank"> <b>kuyuq yaku</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/020.mp4" target="_blank"> <b>kuyuy yakukuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/859.mp4" target="_blank"> <b>liqi liqi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/736.mp4" target="_blank"> <b>llama</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/730.mp4" target="_blank"> <b>limpisapa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
 
 
 
