--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -70,10 +70,25 @@ Los imagenes que se generan en yupanasimi son texturas basadas en los tejidos x 
 <li> <a href="http://yupanasimi.org/video/736.mp4" target="_blank"> <b>llama</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/730.mp4" target="_blank"> <b>limpisapa</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
+
+<li> <a href="http://yupanasimi.org/video/737.mp4" target="_blank"> <b>mallkucha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/701.mp4" target="_blank"> <b>mallkukuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/824.mp4" target="_blank"> <b>mallkuta</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/208.mp4" target="_blank"> <b>mama phuray</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/205.mp4" target="_blank"> <b>mama qucha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/874.mp4" target="_blank"> <b>mayu llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/729.mp4" target="_blank"> <b>mayu pisquwan</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/860.mp4" target="_blank"> <b>mayupi challwa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/869.mp4" target="_blank"> <b>mayupi pisqu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/004.mp4" target="_blank"> <b>mayuta</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/861.mp4" target="_blank"> <b>mayuwan challwata hamun</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/850.mp4" target="_blank"> <b>mikuq lluthu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/805.mp4" target="_blank"> <b>mikuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/010.mp4" target="_blank"> <b>misi</b></a> </li>
+
+
+
+
 
 
 
