--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -84,7 +84,45 @@ Los imagenes que se generan en yupanasimi son texturas basadas en los tejidos x 
 <li> <a href="http://yupanasimi.org/video/861.mp4" target="_blank"> <b>mayuwan challwata hamun</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/850.mp4" target="_blank"> <b>mikuq lluthu</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/805.mp4" target="_blank"> <b>mikuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/010.mp4" target="_blank"> <b>misi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/829.mp4" target="_blank"> <b>miski nina </b></a> </li>
+<li> <a href="http://yupanasimi.org/video/826.mp4" target="_blank"> <b>miski rurucha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/696.mp4" target="_blank"> <b>miski ruruta</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/739.mp4" target="_blank"> <b>musquy</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/815.mp4" target="_blank"> <b>muyukuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/814.mp4" target="_blank"> <b>muyuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/819.mp4" target="_blank"> <b>muyuq kulli qantu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/710.mp4" target="_blank"> <b>muyuq llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/822.mp4" target="_blank"> <b>muyuq mama qucha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/011.mp4" target="_blank"> <b>muyuq parakas</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+
+<li> <a href="http://yupanasimi.org/video/801.mp4" target="_blank"> <b>muyuq qoyllur</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/708.mp4" target="_blank"> <b>muyuq wayracha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/707.mp4" target="_blank"> <b>muyuq wayrakuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/007.mp4" target="_blank"> <b>muyuq yaku</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/727.mp4" target="_blank"> <b>nina rapi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/501.mp4" target="_blank"> <b>ñan</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/694.mp4" target="_blank"> <b>ñawchi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/830.mp4" target="_blank"> <b>ñawi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/016.mp4" target="_blank"> <b>orqo</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/111.mp4" target="_blank"> <b>pachamama</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+
 
 
 
