--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -70,7 +70,6 @@ Los imagenes que se generan en yupanasimi son texturas basadas en los tejidos x 
 <li> <a href="http://yupanasimi.org/video/736.mp4" target="_blank"> <b>llama</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/730.mp4" target="_blank"> <b>limpisapa</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/832.mp4" target="_blank"> <b>llipiqyay</b></a> </li>
-
 <li> <a href="http://yupanasimi.org/video/737.mp4" target="_blank"> <b>mallkucha</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/701.mp4" target="_blank"> <b>mallkukuna</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/824.mp4" target="_blank"> <b>mallkuta</b></a> </li>
@@ -95,7 +94,6 @@ Los imagenes que se generan en yupanasimi son texturas basadas en los tejidos x 
 <li> <a href="http://yupanasimi.org/video/822.mp4" target="_blank"> <b>muyuq mama qucha</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/011.mp4" target="_blank"> <b>muyuq parakas</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-
 <li> <a href="http://yupanasimi.org/video/801.mp4" target="_blank"> <b>muyuq qoyllur</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/708.mp4" target="_blank"> <b>muyuq wayracha</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/707.mp4" target="_blank"> <b>muyuq wayrakuna</b></a> </li>
@@ -106,22 +104,49 @@ Los imagenes que se generan en yupanasimi son texturas basadas en los tejidos x 
 <li> <a href="http://yupanasimi.org/video/830.mp4" target="_blank"> <b>ñawi</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/016.mp4" target="_blank"> <b>orqo</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/111.mp4" target="_blank"> <b>pachamama</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/887.mp4" target="_blank"> <b>muyuq qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/738.mp4" target="_blank"> <b>pakucha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/723.mp4" target="_blank"> <b>panti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/029.mp4" target="_blank"> <b>paña</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/883.mp4" target="_blank"> <b>paqcha llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/865.mp4" target="_blank"> <b>paqchapi challwa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/306.mp4" target="_blank"> <b>para llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/206.mp4" target="_blank"> <b>pata llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/603.mp4" target="_blank"> <b>pata pata </b></a> </li>
+<li> <a href="http://yupanasimi.org/video/858.mp4" target="_blank"> <b>paway</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/856.mp4" target="_blank"> <b>phaway</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/207.mp4" target="_blank"> <b>pillpintu llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/201.mp4" target="_blank"> <b>pillpintu sarapas</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/210.mp4" target="_blank"> <b>pillpintucha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/311.mp4" target="_blank"> <b>pillpintuta tikapas</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/024.mp4" target="_blank"> <b>pirqa llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/012.mp4" target="_blank"> <b>pirqata</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/213.mp4" target="_blank"> <b>pisqu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/870.mp4" target="_blank"> <b>puka inkill</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/890.mp4" target="_blank"> <b>puka mayu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/019.mp4" target="_blank"> <b>puka ñawi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/602.mp4" target="_blank"> <b>puka pata pata </b></a> </li>
+<li> <a href="http://yupanasimi.org/video/872.mp4" target="_blank"> <b>puka pisqu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/892.mp4" target="_blank"> <b>puka wayra</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/871.mp4" target="_blank"> <b>puka wayta</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/017.mp4" target="_blank"> <b>puka yarqa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/879.mp4" target="_blank"> <b>pukachiy</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/880.mp4" target="_blank"> <b>pukaya</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/803.mp4" target="_blank"> <b>puriq tika</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/806.mp4" target="_blank"> <b>puru</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/021.mp4" target="_blank"> <b>puytu llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/009.mp4" target="_blank"> <b>puytu ñawi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/006.mp4" target="_blank"> <b>puyata</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/812.mp4" target="_blank"> <b>puyu llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/855.mp4" target="_blank"> <b>puyuta</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/809.mp4" target="_blank"> <b>qantu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/703.mp4" target="_blank"> <b>qarachi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/877.mp4" target="_blank"> <b>qello</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/882.mp4" target="_blank"> <b>qilluya</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/109.mp4" target="_blank"> <b>qinqu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/721.mp4" target="_blank"> <b>qinti paña</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/888.mp4" target="_blank"> <b>qori wayra</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/695.mp4" target="_blank"> <b>qoyllur</b></a> </li>
+
 
 
 
