--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -147,6 +147,56 @@ Los imagenes que se generan en yupanasimi son texturas basadas en los tejidos x 
 <li> <a href="http://yupanasimi.org/video/888.mp4" target="_blank"> <b>qori wayra</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/695.mp4" target="_blank"> <b>qoyllur</b></a> </li>
 
+<li> <a href="http://yupanasimi.org/video/712.mp4" target="_blank"> <b>qoyllur chaska</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/714.mp4" target="_blank"> <b>qoyllur ruyru</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/713.mp4" target="_blank"> <b>qoyllur tika</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/802.mp4" target="_blank"> <b>qoyllurkuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/014.mp4" target="_blank"> <b>qucha llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/203.mp4" target="_blank"> <b>qucha pillpintu/b></a> </li>
+<li> <a href="http://yupanasimi.org/video/018.mp4" target="_blank"> <b>quchakuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/002.mp4" target="_blank"> <b>quchakuna urqukunapas</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/005.mp4" target="_blank"> <b>quchata</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/103.mp4" target="_blank"> <b>qumir wayta llimpi </b></a> </li>
+<li> <a href="http://yupanasimi.org/video/027.mp4" target="_blank"> <b>rapi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/202.mp4" target="_blank"> <b>rapi llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/112.mp4" target="_blank"> <b>rapi ñawi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/209.mp4" target="_blank"> <b>rapi paña</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/110.mp4" target="_blank"> <b>rapi ruyru </b></a> </li>
+<li> <a href="http://yupanasimi.org/video/107.mp4" target="_blank"> <b>rapikuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/873.mp4" target="_blank"> <b>rapikuna llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/204.mp4" target="_blank"> <b>rapipi pillpíntu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/308.mp4" target="_blank"> <b>riti urqu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/823.mp4" target="_blank"> <b>rupay</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/735.mp4" target="_blank"> <b>rupha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/105.mp4" target="_blank"> <b>sapan pillpintu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/720.mp4" target="_blank"> <b>sapan qoyllur</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/818.mp4" target="_blank"> <b>sisa</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/728.mp4" target="_blank"> <b>suchi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/731.mp4" target="_blank"> <b>sunqu wayra</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/304.mp4" target="_blank"> <b>sunquchay</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/312.mp4" target="_blank"> <b>sunqukuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/884.mp4" target="_blank"> <b>sunqupi tika</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/885.mp4" target="_blank"> <b>sunqupi wayta</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/309.mp4" target="_blank"> <b>sunquruna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/406.mp4" target="_blank"> <b>tawa tikakuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/001.mp4" target="_blank"> <b>tikacha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/719.mp4" target="_blank"> <b>tikakunacha llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/706.mp4" target="_blank"> <b>tikakunata</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/725.mp4" target="_blank"> <b>tikapi pillpintu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/881.mp4" target="_blank"> <b>tikarina</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/862.mp4" target="_blank"> <b>trucha yutuwan</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/601.mp4" target="_blank"> <b>tuta pata pata </b></a> </li>
+<li> <a href="http://yupanasimi.org/video/851.mp4" target="_blank"> <b>tuta qinti</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/402.mp4" target="_blank"> <b>tuta tikacha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/891.mp4" target="_blank"> <b>tutapi mayu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/403.mp4" target="_blank"> <b>tutaya</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/113.mp4" target="_blank"> <b>tutura</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/808.mp4" target="_blank"> <b>uqullu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/807.mp4" target="_blank"> <b>uqullukuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/876.mp4" target="_blank"> <b>rurpi llimpi</b></a> </li>
+
+
+
 
 
 
