--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -196,23 +196,28 @@ Los imagenes que se generan en yupanasimi son texturas basadas en los tejidos x 
 <li> <a href="http://yupanasimi.org/video/876.mp4" target="_blank"> <b>rurpi llimpi</b></a> </li>
 
 
+<li> <a href="http://yupanasimi.org/video/734.mp4" target="_blank"> <b>urpicha</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/028.mp4" target="_blank"> <b>urqu llimpi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/003.mp4" target="_blank"> <b>urquta</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/724.mp4" target="_blank"> <b>urquta musquy</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/502.mp4" target="_blank"> <b>uru</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/211.mp4" target="_blank"> <b>uruchakuna</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/825.mp4" target="_blank"> <b>utqayta wayra</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/886.mp4" target="_blank"> <b>waqar</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/401.mp4" target="_blank"> <b>warmi</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/404.mp4" target="_blank"> <b>wawa uya</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/863.mp4" target="_blank"> <b>wayrapi pisqu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/820.mp4" target="_blank"> <b>wayrapi puyu</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/867.mp4" target="_blank"> <b>wayrapi wayta</b></a></li>
+<li> <a href="http://yupanasimi.org/video/026.mp4" target="_blank"> <b>waytacha</b></a></li>
+<li> <a href="http://yupanasimi.org/video/866.mp4" target="_blank"> <b>wikuñata</b></a></li>
+<li> <a href="http://yupanasimi.org/video/740.mp4" target="_blank"> <b>wikuñacha</b></a></li>
+<li> <a href="http://yupanasimi.org/video/857.mp4" target="_blank"> <b>yutukuna</b></a></li>
+<li> <a href="http://yupanasimi.org/video/726.mp4" target="_blank"> <b>yutucha</b></a></li>
+<li> <a href="http://yupanasimi.org/video/817.mp4" target="_blank"> <b>yuraq mayu</b></a></li>
+<li> <a href="http://yupanasimi.org/video/101.mp4" target="_blank"> <b>yunka</b></a></li>
 
 
-
-
-
-
-
-
-
-<li> <a href="http://yupanasimi.org/video/867.mp4"> <b>wayrapi wayta</b></a></li>
-<li> <a href="http://yupanasimi.org/video/857.mp4"> <b>yutukuna</b></a></li>
-<li> <a href="http://yupanasimi.org/video/726.mp4"> <b>yutucha</b></a></li>
-<li> <a href="http://yupanasimi.org/video/817.mp4"> <b>yuraq mayu</b></a></li>
-<li> <a href="http://yupanasimi.org/video/101.mp4"> <b>yunka</b></a></li>
-<li> <a href="http://yupanasimi.org/video/026.mp4"> <b>waytacha</b></a></li>
-<li> <a href="http://yupanasimi.org/video/866.mp4"> <b>wikuñata</b></a></li>
-<li> <a href="http://yupanasimi.org/video/740.mp4"> <b>wikuñacha</b></a></li>
 <li> </li>
 <li> </li>
 <li> </li>
