--- a/src/content/pages/video.mdx
+++ b/src/content/pages/video.mdx
@@ -148,13 +148,13 @@ Los imagenes que se generan en yupanasimi son texturas basadas en los tejidos x 
 <li> <a href="http://yupanasimi.org/video/109.mp4" target="_blank"> <b>qinqu</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/721.mp4" target="_blank"> <b>qinti paña</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/888.mp4" target="_blank"> <b>qori wayra</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/695.mp4" target="_blank"> <b>qoyllur</b></a> </li>
+<li> <a href="http://yupanasimi.org/video/695.mp4" target="_blank"> <b>qoyllur </b> </a> </li>
 <li> <a href="http://yupanasimi.org/video/712.mp4" target="_blank"> <b>qoyllur chaska</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/714.mp4" target="_blank"> <b>qoyllur ruyru</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/713.mp4" target="_blank"> <b>qoyllur tika</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/802.mp4" target="_blank"> <b>qoyllurkuna</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/014.mp4" target="_blank"> <b>qucha llimpi</b></a> </li>
-<li> <a href="http://yupanasimi.org/video/203.mp4" target="_blank"> <b>qucha pillpintu/b></a> </li>
+<li> <a href="http://yupanasimi.org/video/203.mp4" target="_blank"> <b>qucha pillpintu</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/018.mp4" target="_blank"> <b>quchakuna</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/002.mp4" target="_blank"> <b>quchakuna urqukunapas</b></a> </li>
 <li> <a href="http://yupanasimi.org/video/005.mp4" target="_blank"> <b>quchata</b></a> </li>
